package NSnippets.NProto;

import "search/idl/meta.proto";

message TSecondarySnippets {
    repeated NMetaProtocol.TArchiveInfo Snippets = 1;
};

